adl-frontend/src/test/resources/unit/error/semantic/params/Composite1.adl

composite params.Composite1(a, b) extends api.Type1 {

  contains Primitive1(a, b) as subComp1;
  
  binds this.sItf to subComp1.sItf;
  binds subComp1.cItf to this.cItf;
}
